2020-05-27  PJ Weisberg <pj@irregularexpressions.net>

	* nethack-api.el: Replace use of obsolete last-command-char with
	last-command-event.
	* nh-bot.el: Likewise.

	* nethack-api.el (nh-propertize-attribute): Add logic to handle
	strength between 18 and 19

	* nethack.el (nh-status-mode): Create mode for Nethack status
	buffer
	* nethack-api.el (nhapi-create-status-window): Make status buffer
	use the new mode
	(nh-print-status): Deal with the fact that the new mode makes the
	buffer read-only.

	* nethack.el (nh-message-mode): Create new major mode, for an easy
	place to hang hooks to be run in the message window.
	* nethack-api.el (nhapi-create-message-window): Deal with the fact
	that I made nh-message-mode set the buffer read-only
	* nethack-compat.el (nh-message): Likewise

2020-05-27  Benjamin Yang  <be11ng@protonmail.com>

	* nethack.el (nethack-kill-buffers): Use mapc instead of mapcar.
	(nethack-el-version): Move def of the constant in front of the function
	that calls it
	(nethack-map-tile-face): Use :height instead of :font.

2020-05-26  Benjamin Yang  <be11ng@protonmail.com>

	* mkpatch: Generate a diff for sys/unix/hints/linux-lisp.
	* enh-366.patch (hints/linux-lisp): New file.
	* Makefile (test-patch): Call sh setup.sh with hints/linux-lisp.
	* enh-366.patch (WINSRC): Remove redundant definition
	(WINOBJ): Likewise.
	(WINLIB): Likewise.
	(WINLISPLIB): Add -lncurses and -ltinfo.

	* Makefile (EMACS): Use /usr/bin/emacs instead of just emacs.

2020-05-25  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: New patch for 3.6.6, addressing compiler errors.
	(winlisp.h): Add parameter bkglyph for lisp_print_glyph.
	(winlisp.c): Likewise, and cast mapglyph to (void).
	(winlisp.c): Pass FALSE argument to randrole().
	(winlisp.c): Replace u.ugold with money_cnt(invent).
	(winlisp.c): Replace terminate with nh_terminate.
	(winlisp.c): Comment out iflags.DECgraphics and iflags.IBMgraphics.